# fb-realizer

./: .gitignore  .gitmodules  README.md  config.py  melody_detection.py  pyproject.toml  realize.py  test_file.musicxml
.github/workflows/: python-app.yml
realizer/: __init__.py
test_pieces/: BWV_245_passion.musicxml  Couperin_Trio_Sonata.musicxml  Erhore_mich_wenn_ich_rufe_Schutz.musicxml  Oboe_Concerto_in_D_minor_Op9_No2_Tomaso_Albinoni.musicxml  Oboe_Concerto_in_D_minor_Op9_No2__Tomaso_Albinoni.musicxml  SWV_378.musicxml  test_accidentals.mxl  test_ignore_accidental.musicxml  test_inversions.musicxml  test_maat.musicxml  test_melody_notes.musicxml  test_mis2.musicxml  test_te_laag.musicxml  test_tussennoot.musicxml
tests/: test_melody_detection.py  test_realization.py  test_rules.py  tests.py
