[tool.poetry]
name = "fb-realizer"
version = "0.1.0"
description = "Automatic realization of figured bass."
authors = ["Tristan Trouwen <tristan.trouwen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
jupyter = "^1.0.0"
chardet = "^5.2.0"
joblib = "^1.3.2"
jsonpickle = "^3.0.2"
matplotlib = "^3.7.2"
more-itertools = "^10.1.0"
numpy = "^1.25.2"
webcolors = "^1.13"
requests = "^2.31.0"
scipy = "^1.11.2"
mypy = "^1.5.1"
hatchling = "^1.18.0"
flake8-quotes = "^3.3.2"
flake8 = "^6.1.0"
wheel = "^0.41.2"
pylint = "^2.17.5"
sphinx = "^7.2.5"
python-levenshtein = "^0.21.1"
coverage = "^7.3.1"
nbconvert = "^7.8.0"
nbval = "^0.10.0"
pytest = "^7.4.2"
docutils = "^0.20.1"
types-requests = "^2.31.0.2"
music21 = { "path" = "music21", develop = true }
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
